public/style.css
@import 'https://fonts.googleapis.com/css?family=Nunito|Quattrocento+Sans:300,300i,400,400i,700,700i';

body > blockquote {
  text-align: right;
  margin: 0 1rem 0 68vw;
}
body > blockquote q { font-style: italic }
body > blockquote abbr { color: rgba(255,5,225, .81) }
body > blockquote p {
  margin: 0;
  opacity: 0.4;
  font-size: .6em;
  text-align: right;
  font-style: italic;
  letter-spacing: .1em;
}
body > figure {
  display: flex;
  height: 70vh;
  width: 76vw;
  align-self: flex-end;
  flex-flow: column wrap;
  justify-content: center;
}
body > figure figcaption {
  font-size: 1.2em;
  font-weight: 700;
  height: 10vh;
  width: 32vw;
  align-self: flex-end;
  margin: 0;
  padding:  0 1vw;
  color: rgba(255,255,255,0.9);
  border-radius: .9em 0 0 0;
  background: rgba(10,10,10,0.9);
  box-shadow: 0 0 15px 1px rgba(0,0,0,0.4)
}
body > figure p {
  align-self: flex-end;
  margin: 0;
  padding:  0 1vw;
  border-radius: 0 0 0 .5em;
  width: 32vw;
  font-size: 0.7em;
  height: 46vh;
  font-weight: 300;
  background: rgba(20,20,20,0.8);
  box-shadow: 0 0 15px 1px rgba(0,0,0,0.4)
}
body > figure > iframe {
  order: 1;
  width: 41vw;
  height: 56vh;
  margin-right: 1vw;
  align-self: flex-start;
  border-radius: .9em;
  border-radius: 0 .5em .5em 0;
  background: black;
  box-shadow: 0 0 15px 1px rgba(0,0,0,0.4)
}
body > figure > iframe {
  opacity: 0.9;
}
body > figure > iframe:hover {
  opacity: 1.0;
}

html * {
  margin:0;
  padding:0;

  text-align:center;
  padding-top:0.02px;
  padding-bottom:0.02px;
}
html {
  background: rgb(29,29,29)  url(/main.svg) no-repeat top left;
  background-size: 30%;
  background-attachment: fixed;
  // https://developer.mozilla.org/en-US/docs/Web/CSS/background-attachment

  text-align:center;

  letter-spacing:0.06rem;

  font-size: 1.5vw;
  line-height: 1.612em;
  font-size-adjust:0.5;
  font-family: 'Quattrocento Sans', sans-serif;
  color: rgba(255,255,255,0.7);
  font-weight: 400;

  @media (min-width: 768px) {
    font-size: 2vw;
  }
}
p {
  margin: 0 22vw 1.612em;
//background: rgba(255,255,255,0.4);;
  text-align:left;
//font-size: 0.9rem;
//line-height: 1.618em;
}
body {
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: rgba(0,0,0,0.4) url(brick-wall-dark.png);
}

a, a:visited {
  text-decoration: none;
  color: rgba(255,5,225, .81);
  border-bottom: .1em solid rgba(255, 255, 255, 0.6);
}
a:hover {
  color: rgba(255,5,225, .91);
  border-bottom: .1em solid rgba(255, 255, 255, 0.9);
}

header {
  display: block;
  margin-top: 2em;
  text-align: center;
}
main > section > header {
  color: rgba(255,255,255,0.9);
  font-size: 1.612em;
  display: block;
  text-align: center;
  margin: 1.612em 22vw .612em;
}

h1 {
  padding: 0;
  margin: 1rem 1rem 0;
  font-size: 3.5rem;
  text-align: right;
  line-height: 3.5rem;
  padding-right: 1.1em;
  background: url(/h1.png) no-repeat;
  background-position: top right;
  background-size: 1em 1em;
  text-shadow: 0 0 10px rgba(0,0,0,0.9)
}

body > main {
  margin: 2rem 0 80vh;
  text-align: center;
  background: rgb(35,35,35);
  box-shadow: 0 0 20px 2px rgba(0,0,0,0.2)
}

#culture, #politics, #community, #media, #sponsors {
//background-size: 32%;
  background-attachment: scroll;
}
#culture {
  margin-top: 3rem;
}
#sponsors p:last-of-type,
#media p:last-of-type {
  margin-bottom: 4em;
}
#media {
  display: none;
}
body > main > img {
  width: 96%;
  height: auto;
}

body > aside {
  z-index: 0;
  margin-bottom: 20vh;
}

article {
  width: auto;
  height: auto;
  background: rgba(0,0,0,.6);
}

article hgroup {
  margin: 0 0 1.612em;
  padding-left: 3.2em;
  text-align: left;
  background: url(/article.media.female.png) no-repeat top left;
  background-size: auto 4.5em;
  background-position: 2em top;
}

article hgroup header {
  display: block;
  font-size: 1.5em;
  font-weight: 700;
  line-height: 2em;
}
article hgroup header:before {
  content: '"';
  color: rgba(230,230,230, .8);
}

article hgroup header:after {
  content: '"';
  color: rgba(230,230,230, .8);
}

article hgroup strong {
  display: block;
  font-size: 1.3em;
  margin-left: 1em;
}
article hgroup strong:before {
  content: '-';
}

article figure {
  margin: 0;
  width: 100%;
  margin: 0 0 1.612em;
}
article figure figcaption {
  color: rgba(255,255,255, .7)
}

article p {
  text-align: left;
  font-size: 1.3em;
  line-height: 1.612em;
  margin: 0 .4em 1.612em;
}

article aside {
  margin: 0;
  padding: 0;
}
article aside header {
  font-size: 1.8em;
  margin: 0 0 .612rem;
}
article aside menu {
  width: 100%;
  padding-left: 0;
  list-style: none;
  margin: 0 0 1.612em;
}

article aside li {
  font-size: 1.3em;
  margin: 0;
  display: block;
}
article aside li:last-of-type {
  margin-bottom: 1.612em;
}

video {
  margin: 0;
  width: 100%;
  height: auto;
  display: block;
  background: #fff;
  margin: 0 0 1.612em;
}

body > footer {
  bottom: 0;
  z-index: 1;
  width: 100vw;
  height: 20vh;
  position: fixed;
//background: url(/girl.png) no-repeat 79vw bottom;
  background-size: contain;

  display: flex;
  align-items: flex-end;
  justify-content: flext-start;
}
body > footer nav {
  opacity: 0.9;
  display: flex;
  background: rgba(0,0,0,0.9);
  flex-flow: row wrap;

  padding: 1em 1em 1.4em;
  border-radius: 3vh;
  height: 1.162em;
  margin: 0 1em 0.8em;
  box-shadow: 0 0 15px 1px rgba(0,0,0,0.4)
}
body > footer nav:hover {
  opacity: 1.0;
}
body footer nav header {
  height: inherit;
  margin: 0 1em 0 .5em;
}
body > footer nav li {
  opacity: 0.6;
  margin: 0 0.5em;
  list-style: none;
  height: inherit;
}
body > footer nav li:hover {
  opacity: 0.8;
}

